tests/snapshots/labels_on_a_cache@macos-d0-s0.snap
---
source: tests/browse.rs
---
/labels  48.0 KiB
  20.0 KiB  41.7% rust/                                        12.0 KiB  m
  12.0 KiB  25.0% node_modules/
   8.0 KiB  16.7% target/
   4.0 KiB   8.3% __pycache__/
   4.0 KiB   8.3% tagged/
       0 B        .venv/
       0 B        Downloads/
       0 B        venv/









node_modules/ | 12.0 KiB  own 12.0 KiB | cache: npm: npm install rebuilds it
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  t top  o open  ? help  q quit
--- styles ---
 0   9..17  BOLD
 1   0..10  Green
 1  10..11  DarkGray
 1  12..17  Green
 1  18..23  BOLD
 1  61..71  Green
 1  71..72  DarkGray
 2   0..60  Indexed(231) on Indexed(25) BOLD
 3   0..10  Green
 3  10..11  DarkGray
 3  12..17  Green
 3  18..25  BOLD
 4   0..10  Green
 4  10..11  DarkGray
 4  12..17  Green
 4  18..30  Green BOLD
 5   0..10  Green
 5  10..11  DarkGray
 5  12..17  Green
 5  18..25  Green BOLD
 6   0..11  DarkGray
 6  12..17  DarkGray
 6  18..24  Green BOLD
 7   0..11  DarkGray
 7  12..17  DarkGray
 7  18..28  Yellow BOLD
 8   0..11  DarkGray
 8  12..17  DarkGray
 8  18..23  BOLD
18   0..13  Green BOLD
18  13..16  DarkGray
18  16..24  Green
18  24..30  DarkGray
18  38..41  DarkGray
18  41..76  Green
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  88..89  Cyan BOLD
19  96..97  Cyan BOLD
19 104..105 Cyan BOLD
