tests/snapshots/labels_on_a_known_folder@linux-d4096-s0.snap
---
source: tests/browse.rs
---
/labels  88.0 KiB | scanned 0 s ago
  28.0 KiB  31.8% rust/
  16.0 KiB  18.2% node_modules/
  12.0 KiB  13.6% target/
   8.0 KiB   9.1% __pycache__/
   8.0 KiB   9.1% tagged/
   4.0 KiB   4.5% .venv/
   4.0 KiB   4.5% Downloads/
   4.0 KiB   4.5% venv/









Downloads/ | 4.0 KiB  own 4.0 KiB | downloads: downloaded files, often old installers and archives
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  t top  o open  ? help  q quit
--- styles ---
 0   9..17  BOLD
 0  17..20  DarkGray
 1   0..10  Green
 1  10..11  DarkGray
 1  12..17  Green
 1  18..23  BOLD
 2   0..10  Green
 2  10..11  DarkGray
 2  12..17  Green
 2  18..31  Green BOLD
 3   0..10  Green
 3  10..11  DarkGray
 3  12..17  Green
 3  18..25  BOLD
 4   0..10  Green
 4  10..11  DarkGray
 4  12..17  Green
 4  18..30  Green BOLD
 5   0..10  Green
 5  10..11  DarkGray
 5  12..17  Green
 5  18..25  Green BOLD
 6   0..10  Green
 6  10..11  DarkGray
 6  12..17  Green
 6  18..24  Green BOLD
 7   0..60  Indexed(231) on Indexed(25) BOLD
 8   0..10  Green
 8  10..11  DarkGray
 8  12..17  Green
 8  18..23  BOLD
18   0..10  Yellow BOLD
18  10..13  DarkGray
18  13..20  Green
18  20..26  DarkGray
18  33..36  DarkGray
18  36..98  Yellow
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  88..89  Cyan BOLD
19  96..97  Cyan BOLD
19 104..105 Cyan BOLD
