tests/snapshots/live_4_min_later@linux-d0-s0.snap
---
source: tests/browse.rs
---
/live  8.0 KiB | -4.0 KiB since opened 4 min ago | scanned 4 min ago
   8.0 KiB    -4.0 KiB  100% a/                                4.0 KiB  keep
                                                               4.0 KiB  new















a/ | 8.0 KiB  own 8.0 KiB
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  ? help  q quit
--- styles ---
 0   7..14  BOLD
 0  14..17  DarkGray
 0  48..51  DarkGray
 1   0..59  Indexed(231) on Indexed(25) BOLD
 1  60..70  Green
 1  70..71  DarkGray
 2  60..70  Green
 2  70..71  DarkGray
18   0..2   BOLD
18   2..5   DarkGray
18   5..12  Green
18  12..18  DarkGray
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  89..90  Cyan BOLD
